--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 # Selamat Berjumpa {.unnumbered}
 
-![About Me](images/AZRL.png){width=950%}
+![About Me](images/CoverIstri.jpg){width=950%}
 
 Muhammad Azikra Wira Pratama yang biasanya dipanggil dengan "Zik" adalah mahasiswa di Sekolah Teknik Elektro dan Informatika - Komputasi ITB.
 
