--- a/intro.qmd
+++ b/intro.qmd
@@ -1,4 +1,4 @@
-# **Kisah yang Membentuk Diri Anda: Mengenal Kekuatan Identitas Naratif**
+# All About Me
 
 Manusia adalah pencerita alami. Sejak zaman dahulu, kita selalu berusaha memahami kekacauan hidup dengan merangkainya menjadi sebuah cerita. Para ahli bahkan menyebut kita sebagai "organisme pencerita" (*storytelling organisms*) yang menjalani "kehidupan yang penuh cerita" (*storied lives*) (2). Proses ini bukanlah sekadar menyusun fakta, melainkan sebuah proses aktif untuk menciptakan makna.
 
