--- a/index.tex
+++ b/index.tex
@@ -212,9 +212,7 @@ Istri aku ada Kita Ikuyo dan Liz
 
 \bookmarksetup{startatroot}
 
-\chapter{\texorpdfstring{\textbf{Kisah yang Membentuk Diri Anda:
-Mengenal Kekuatan Identitas
-Naratif}}{Kisah yang Membentuk Diri Anda: Mengenal Kekuatan Identitas Naratif}}\label{kisah-yang-membentuk-diri-anda-mengenal-kekuatan-identitas-naratif}
+\chapter{All About Me}\label{all-about-me}
 
 Manusia adalah pencerita alami. Sejak zaman dahulu, kita selalu berusaha
 memahami kekacauan hidup dengan merangkainya menjadi sebuah cerita. Para
