--- a/index.tex
+++ b/index.tex
@@ -187,10 +187,10 @@
 
 \bookmarksetup{startatroot}
 
-\chapter*{Selamat Berjumpa}\label{selamat-berjumpa}
-\addcontentsline{toc}{chapter}{Selamat Berjumpa}
+\chapter*{Selamat Datang}\label{selamat-datang}
+\addcontentsline{toc}{chapter}{Selamat Datang}
 
-\markboth{Selamat Berjumpa}{Selamat Berjumpa}
+\markboth{Selamat Datang}{Selamat Datang}
 
 \begin{figure}[H]
 
@@ -198,7 +198,7 @@
 
 }
 
-\caption{About Me}
+\caption{Gambar istri-istri gweh}
 
 \end{figure}%
 
