--- a/index.tex
+++ b/index.tex
@@ -172,9 +172,9 @@
   \apptocmd{\@title}{\par {\large #1 \par}}{}{}
 }
 \makeatother
-\subtitle{Tugas UTS Komunikasi Interpersonal dan Publik}
+\subtitle{Tugas Portofolio Komunikasi Interpersonal dan Publik}
 \author{18224089 Muhammad Azikra Wira Pratama}
-\date{2025-10-10}
+\date{2025-10-05}
 \begin{document}
 \maketitle
 
@@ -187,256 +187,103 @@
 
 \bookmarksetup{startatroot}
 
-\chapter*{Selamat Datang}\label{selamat-datang}
-\addcontentsline{toc}{chapter}{Selamat Datang}
+\chapter*{Hallo Semua}\label{hallo-semua}
+\addcontentsline{toc}{chapter}{Hallo Semua}
 
-\markboth{Selamat Datang}{Selamat Datang}
+\markboth{Hallo Semua}{Hallo Semua}
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=9.5\linewidth,height=\textheight,keepaspectratio]{images/CoverIstri.jpg}
+{\centering \pandocbounded{\includegraphics[keepaspectratio]{images/CoverIstri.png}}
 
 }
 
-\caption{Gambar istri-istri gweh}
+\caption{Profil diri}
 
 \end{figure}%
 
-Muhammad Azikra Wira Pratama yang biasanya dipanggil dengan ``Zik''
-adalah mahasiswa di Sekolah Teknik Elektro dan Informatika - Komputasi
-ITB.
+Muhammad Azikra Wira Pratama, yang akrab dipanggil ``Zik'' atau
+``Zikra'', merupakan mahasiswa Sekolah Teknik Elektro dan Informatika --
+Komputasi, Institut Teknologi Bandung (Angkatan 2024), dengan program
+studi Sistem dan Teknologi Informasi (kode II).
 
-Kamu tau enggak kalo aku tidak karbit
+Zikra lahir di Pekanbaru pada tahun 2006 dan saat ini berdomisili di
+Cimahi.
 
-Istri aku ada Kita Ikuyo dan Liz
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section*{Connect with Me}\label{connect-with-me}
+\addcontentsline{toc}{section}{Connect with Me}
+
+\markright{Connect with Me}
+
+\begin{itemize}
+\tightlist
+\item
+  Email :
+  \href{mailto:18224089@std.stei.itb.ac.id}{\nolinkurl{18224089@std.stei.itb.ac.id}}
+\end{itemize}
 
 \bookmarksetup{startatroot}
 
 \chapter{All About Me}\label{all-about-me}
 
-Manusia adalah pencerita alami. Sejak zaman dahulu, kita selalu berusaha
-memahami kekacauan hidup dengan merangkainya menjadi sebuah cerita. Para
-ahli bahkan menyebut kita sebagai ``organisme pencerita''
-(\emph{storytelling organisms}) yang menjalani ``kehidupan yang penuh
-cerita'' (\emph{storied lives}) (2). Proses ini bukanlah sekadar
-menyusun fakta, melainkan sebuah proses aktif untuk menciptakan makna.
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\href{./audio/Identitas_Naratif__Jadi_Sutradara_dan_Penulis_Kisah_Hidup_Anda_.mp4}{Hayu
-dengar poscastnya}
-
-Kisah personal yang terus berkembang inilah yang disebut para psikolog
-sebagai \textbf{``identitas naratif''}---sebuah cerita yang kita bangun
-untuk memahami keberadaan kita, dengan menghubungkan masa lalu, masa
-kini, dan masa depan kita menjadi satu kesatuan yang utuh (3, 8). Cerita
-batin ini adalah proses \emph{penciptaan diri} yang aktif, bukan sekadar
-menceritakan ulang kejadian. Kisah inilah yang menjawab
-pertanyaan-pertanyaan paling mendasar: ``Siapa saya? Bagaimana saya
-sampai di sini? Ke mana saya akan pergi?'' (5, 6).
-
-\subsection{\texorpdfstring{\textbf{1. Tiga Lapisan Diri Anda: Di Mana
-Cerita Hidup Anda
-Berada?}}{1. Tiga Lapisan Diri Anda: Di Mana Cerita Hidup Anda Berada?}}\label{tiga-lapisan-diri-anda-di-mana-cerita-hidup-anda-berada}
-
-Psikolog Dan P. McAdams membagi kepribadian manusia ke dalam tiga
-tingkatan yang berbeda. Identitas naratif merupakan tingkatan tertinggi
-dan paling personal, yang menyatukan semua bagian lain dari diri kita
-(8).
-
-\begin{itemize}
-\item
-  \textbf{Level 1: Sifat Dasar} Ini adalah ciri-ciri umum kepribadian
-  kita yang cenderung stabil, seperti apakah kita seorang
-  \emph{introvert} atau \emph{ekstrovert}.
-\item
-  \textbf{Level 2: Kepedulian Pribadi} Ini mencakup hal-hal yang lebih
-  spesifik seperti tujuan hidup, nilai-nilai yang kita pegang, dan
-  keyakinan kita.
-\item
-  \textbf{Level 3: Identitas Naratif} Inilah kisah hidup yang kita
-  ciptakan untuk mengikat Level 1 dan 2 menjadi sebuah narasi yang
-  koheren dan bermakna. Ini adalah cerita tentang ``diri'' kita.
-\end{itemize}
-
-Wawasan paling memberdayakan dari konsep ini adalah: meskipun kita
-mungkin tidak dapat dengan mudah mengubah sifat dasar kita (Level 1),
-kita \emph{memiliki kekuatan} untuk belajar mengubah cerita yang kita
-sampaikan tentang hidup kita (Level 3). Perubahan narasi ini terbukti
-memiliki dampak besar pada kesejahteraan dan kebahagiaan kita (9).
-
-Namun, tidak semua cerita diciptakan sama. Mari kita lihat pola-pola
-naratif yang dapat membuat sebuah kisah hidup menjadi lebih
-memberdayakan.
-
-\subsection{\texorpdfstring{\textbf{2. Pola-Pola Kisah Kehidupan: Apa
-yang Membuat Sebuah Cerita
-Bermanfaat?}}{2. Pola-Pola Kisah Kehidupan: Apa yang Membuat Sebuah Cerita Bermanfaat?}}\label{pola-pola-kisah-kehidupan-apa-yang-membuat-sebuah-cerita-bermanfaat}
-
-Penelitian menunjukkan bahwa tidak semua cerita yang kita bangun
-sama-sama bermanfaat bagi kesehatan mental kita (4). Beberapa tema
-naratif secara konsisten terhubung dengan kehidupan yang lebih sejahtera
-dan berkembang.
-
-\subsubsection{Penebusan vs.~Kontaminasi: Mengubah Penderitaan Menjadi
-Kekuatan}\label{penebusan-vs.-kontaminasi-mengubah-penderitaan-menjadi-kekuatan}
-
-Salah satu pola naratif yang paling penting adalah cara kita membingkai
-peristiwa sulit.
-
-\textbf{Cerita Penebusan (Redemption Story)} adalah narasi yang bergerak
-dari situasi negatif ke hasil yang positif (misalnya, kegagalan yang
-memberikan pelajaran berharga, atau penderitaan yang melahirkan kekuatan
-baru). Pola ini sangat kuat kaitannya dengan kebahagiaan, kepuasan
-hidup, dan resiliensi (7).
-
-\textbf{Cerita Kontaminasi (Contamination Story)} adalah kebalikannya.
-Cerita ini dimulai dari peristiwa baik yang kemudian berubah menjadi
-buruk. Kisah semacam ini seperti ``tumpahan minyak yang meracuni air,''
-menjebak sang pencerita dalam rasa sakit dan putus asa (3, 11).
-
-\subsubsection{Agensi vs.~Kepasifan: Menjadi Pahlawan dalam Kisah
-Anda}\label{agensi-vs.-kepasifan-menjadi-pahlawan-dalam-kisah-anda}
-
-Pola penting lainnya adalah peran yang kita ambil dalam cerita kita
-sendiri.
-
-\textbf{Agensi (Agency)} adalah ketika kita menampilkan diri sebagai
-aktor utama dalam cerita kita---seseorang yang secara aktif membuat
-keputusan, mengambil tindakan, dan mengatasi rintangan. Mengembangkan
-rasa agensi dalam cerita hidup adalah salah satu prediktor terkuat untuk
-perbaikan dalam terapi (3, 7).
-
-\textbf{Kepasifan (Passivity)} ditandai dengan perasaan menjadi korban
-keadaan. Dalam narasi ini, peristiwa seolah-olah ``terjadi begitu saja
-pada'' sang pencerita, yang digambarkan sebagai korban pasif dari takdir
-atau tindakan orang lain (8).
-
-Tabel berikut merangkum tema-tema naratif yang membangun dan merusak,
-beserta dampaknya bagi kesejahteraan kita.
+\section{Identitas Diri}\label{identitas-diri}
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}@{}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.2619}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.7381}}@{}}
 \toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+\textbf{Nama}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Muhammad Azikra Wira Pratama
+\end{minipage} \\
+\midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Pola Naratif & Dampak Psikologis \\
-\textbf{Pola Naratif yang Membangun (Generative Themes)} & \\
-\textbf{Penebusan} (Negatif → Positif) & Meningkatkan kebahagiaan,
-kepuasan hidup, resiliensi, dan \emph{generativitas} (keinginan untuk
-berkontribusi pada kesejahteraan generasi mendatang) (4, 7). \\
-\textbf{Agensi} (Diri sebagai Aktor Efektif) & Meningkatkan kepercayaan
-diri, kesehatan mental, dan merupakan prediktor kuat perbaikan dalam
-terapi (7). \\
-\textbf{Koneksi} (Hubungan \& Rasa Memiliki) & Meningkatkan
-kesejahteraan, mengurangi rasa kesepian, dan memberikan rasa memiliki
-tujuan hidup yang lebih besar (8). \\
-\textbf{Pola Naratif yang Merusak (Disruptive Themes)} & \\
-\textbf{Kontaminasi} (Positif → Negatif) & Menurunkan kesejahteraan,
-menyebabkan depresi, keputusasaan, dan perasaan terperangkap dalam
-pengalaman negatif (3). \\
-\textbf{Kepasifan} (Diri sebagai Korban) & Menimbulkan perasaan menjadi
-korban, demotivasi, rasa tidak berdaya, depresi, dan hasil kesehatan
-mental yang buruk (8). \\
-\textbf{Isolasi} (Terputus dari Orang Lain) & Menyebabkan kesepian,
-keputusasaan, kurangnya dukungan sosial, dan meningkatkan kerentanan
-terhadap gangguan psikologis (8). \\
+\textbf{Program Studi} & Sistem dan Teknologi Informasi \\
+\textbf{NIM} & 18224089 \\
+\textbf{Tujuan} & Memperkenalkan sosok diri secara reflektif berdasarkan
+konsep-konsep komunikasi diri \\
 \end{longtable}
 
-Lalu, bagaimana pikiran kita menciptakan pola-pola naratif ini?
-Jawabannya terletak pada sebuah proses kognitif yang luar biasa.
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\subsection{\texorpdfstring{\textbf{3. Seni Memberi Makna: Kekuatan
-Super Anda dalam
-Bernalar}}{3. Seni Memberi Makna: Kekuatan Super Anda dalam Bernalar}}\label{seni-memberi-makna-kekuatan-super-anda-dalam-bernalar}
+\section{Refleksi Diri}\label{refleksi-diri}
 
-Pikiran kita memiliki ``mesin pembuat makna'' yang disebut
-\textbf{penalaran otobiografis} (\emph{autobiographical reasoning}).
-Inilah kemampuan kognitif yang memungkinkan kita menghubungkan
-peristiwa-peristiwa dalam hidup dengan identitas diri kita dan memahami
-signifikansinya (10).
+Portofolio ini saya buat sebagai sarana untuk \textbf{merefleksikan diri
+saya sebenarnya} bagaimana saya \textbf{memandang diri sendiri}, dan
+bagaimana saya \textbf{menampilkan diri kepada orang lain}.\\
+Melalui proses ini, saya berusaha untuk memahami siapa saya di balik
+peran dan ekspektasi sosial yang saya jalani setiap hari.
 
-Tanpa penalaran ini, hidup kita hanyalah daftar kejadian. Dengan
-penalaran ini, hidup kita menjadi sebuah cerita yang bermakna.
+Saya percaya bahwa dengan memahami diri secara jujur, saya dapat
+\textbf{hidup dengan lebih autentik, selaras dengan nilai-nilai yang
+saya yakini}, dan berinteraksi dengan orang lain secara lebih terbuka
+dan bermakna.
 
-Temuan paling penting dari psikologi naratif adalah ini:
-\textbf{kemampuan kita untuk memaknai peristiwa sulit secara positif
-(misalnya, menemukan hikmah atau pelajaran) lebih berpengaruh pada
-kesejahteraan kita daripada peristiwa itu sendiri} (10). Ini bukan sifat
-bawaan, melainkan sebuah keterampilan yang bisa dipelajari dan dilatih.
-
-Memahami hal ini memberi kita kekuatan. Langkah-langkah berikutnya
-adalah latihan praktis untuk mengasah `mesin pembuat makna' ini dan
-menjadi penulis yang lebih sadar atas kisah hidup kita sendiri.
-
-\subsection{\texorpdfstring{\textbf{4. Mulai Menulis Ulang Kisah Anda:
-Dua Langkah
-Praktis}}{4. Mulai Menulis Ulang Kisah Anda: Dua Langkah Praktis}}\label{mulai-menulis-ulang-kisah-anda-dua-langkah-praktis}
-
-Meskipun kita tidak bisa mengubah masa lalu, kita memiliki kekuatan luar
-biasa untuk mengubah \emph{cerita} yang kita sampaikan tentang masa lalu
-itu (29). Berikut adalah dua langkah praktis yang terinspirasi dari
-Terapi Naratif untuk memulai proses ini.
-
-\subsubsection{Langkah 1: Pisahkan Diri Anda dari
-Masalah}\label{langkah-1-pisahkan-diri-anda-dari-masalah}
-
-Teknik ini disebut \textbf{eksternalisasi masalah}. Caranya adalah
-dengan mengubah cara kita berbicara tentang masalah kita.
-
-Misalnya, alih-alih berpikir, \emph{``Saya adalah orang yang
-pencemas,''} coba bingkai ulang menjadi, \emph{``Saya adalah orang yang
-sedang berhadapan dengan pengaruh kecemasan''} (35).
-
-Pergeseran bahasa yang sederhana ini menciptakan jarak psikologis.
-Masalah tidak lagi menjadi bagian inti dari identitas Anda, melainkan
-sesuatu di luar diri Anda yang bisa diamati, dipahami, dan dihadapi. Ini
-membuat masalah terasa jauh lebih bisa dikelola.
-
-\subsubsection{Langkah 2: Temukan ``Momen Berkilau''
-Anda}\label{langkah-2-temukan-momen-berkilau-anda}
-
-Setelah Anda memisahkan diri dari masalah, langkah selanjutnya adalah
-mencari bukti yang bertentangan dengan ``cerita yang penuh masalah''
-tersebut. Dalam Terapi Naratif, ini disebut \emph{unique outcomes} atau
-yang bisa kita sebut \textbf{momen berkilau} (\emph{sparkling moments}).
-
-Ini adalah momen-momen, sekecil apa pun, di mana masalah tersebut tidak
-berkuasa atas diri Anda. Tanyakan pada diri Anda:
-
-``Ingatkah saat di mana `Si Pengkritik' dalam diri Anda muncul, tetapi
-Anda tetap berhasil bertindak dengan percaya diri?'' (36)
-
-Atau, ``Apakah ada momen ketika `rasa malas' mencoba mengambil alih,
-tetapi Anda tetap berhasil menyelesaikan tugas itu?''
-
-Momen-momen berkilau ini adalah bukti nyata dari kekuatan, nilai, dan
-ketahanan Anda. Mereka adalah bahan mentah yang dapat Anda gunakan untuk
-mulai menenun sebuah cerita baru yang lebih kuat dan lebih
-memberdayakan.
-
-\subsection{\texorpdfstring{\textbf{5. Kesimpulan: Kisah Anda Adalah
-Perjalanan yang Terus
-Berlanjut}}{5. Kesimpulan: Kisah Anda Adalah Perjalanan yang Terus Berlanjut}}\label{kesimpulan-kisah-anda-adalah-perjalanan-yang-terus-berlanjut}
-
-Pada akhirnya, kita semua adalah penulis kisah hidup kita sendiri.
-Cerita yang kita sampaikan kepada diri kita sendiri secara aktif
-menciptakan realitas kita (5). Kisah hidup yang sehat ditandai oleh
-tema-tema penebusan, di mana kesulitan diubah menjadi pertumbuhan, dan
-agensi, di mana kita menjadi pahlawan dalam perjalanan kita sendiri.
-
-Tujuannya bukanlah untuk menulis sebuah cerita yang ``sempurna'' dan
-tanpa cela. Tujuannya adalah untuk menumbuhkan keberanian untuk terus
-menulis, terus mencari makna, dan menjadi penulis sebuah kisah hidup
-yang berani, jujur, dan layak untuk diceritakan.
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \bookmarksetup{startatroot}
 
 \chapter{My Songs for You}\label{my-songs-for-you}
 
-Post Wedding Kawah Putih Lirik by Armein Z. R. Langi Music: SUNO
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-\url{https://youtu.be/KWthEImJ9mY?si=iUV8Ghhj0R3gKQyZ}
+Ini adalah lagu yang sangat berarti bagi saya.
+
+\url{https://www.youtube.com/watch?v=HwGFMez_Tnc}
+
+Lagu ini menemani saya yang sedang mengalami banyaknya masalah, di akhir
+jenjang SMA. Liriknya menggambarkan dimana banyak kenyataan pahit yang
+terjadi, dunia akan terus berjalan seperti hujan yang akan selalu turun
+kapanpun itu. Apapun yang terjadi dalam kehidupan, harus selalu maju
+karena hujan tidak akan berhenti walaupun saat seseorang tenggelam dalam
+kesedihan.
 
 Why am I singing for you? \href{./Rivers\%20In\%20My\%20Mind.mp3}{River
 in my Mind}
