All-about-me done

--- a/intro.qmd
+++ b/intro.qmd
@@ -8,7 +8,7 @@
 |-----------|-------------------------------|
 | **Program Studi** | Sistem dan Teknologi Informasi |
 | **NIM** | 18224089 |
-| **Tujuan** | Memperkenalkan sosok diri secara reflektif berdasarkan konsep-konsep komunikasi diri |
+| **Tujuan** | Memperkenalkan sosok diri secara reflektif |
 
 ---
 
@@ -20,3 +20,56 @@ Melalui proses ini, saya berusaha untuk memahami siapa saya di balik peran dan e
 Saya percaya bahwa dengan memahami diri secara jujur, saya dapat **hidup dengan lebih autentik, selaras dengan nilai-nilai yang saya yakini**, dan berinteraksi dengan orang lain secara lebih terbuka dan bermakna.
 
 ---
+
+> _“Hujan tidak selalu berarti sedih, kadang hanya cara dunia mengingatkan kita untuk berhenti sejenak.”_
+
+---
+
+## Siapa saya
+
+Kenalin saya **Muhammad Azikra Wira Pratama**, atau biasa dipanggil **Zik/Zikra**. Saya mahasiswa dari program studi Sistem dan Teknologi Informasi (II), Fakultas STEI, angkatan 2024. 
+
+Saya lahir di **Pekanbaru** dan kini tinggal di **Cimahi**. Walau saya berdomisili Cimahi, saya sangat sering pergi ke **Bandung**.
+
+---
+
+## Apa yang Membentuk Saya
+
+Sejak kecil, saya selalu tertarik dengan bidang teknologi yang dimulai dari kesukaan saya ketika memainkan gim. Bidang ini saya telusuri sedikit-sedikit hingga jadi tertarik untuk masuk ke jurusan di dunia informatika. Kampus yang saya impikan itu **ITB** dan ketika mengetahui bahwa terdapat fakultas **STEI** saya menjadikan hal tersebut target selama menempuh pendidikan **SMA**.
+
+---
+
+## Bagaimana Saya Melihat Diri
+
+Saya orang yang **pendiam di awal**, tapi **kalau sudah nyaman akan sangat ekpresif**. Saya cenderung memilih diam jika ada diberikan waktu untuk berpikir dalam memutuskan suatu hal.
+
+Hal kecil yang terjadi kadang saya perhatikan seperti apa respons spontan yang diberikan ketika saya berbicara, bertindak, atau bercanda. Saya berusaha untuk memerhatikan diri agar tidak menyinggung perasaan orang. Hal tersebutlah yang membuat saya belajar mengenai **Komunikasi diri**, tentang bagaimana jujur tanpa harus membuka hal pribadi. 
+
+---
+
+## Sisi Ringan Saya
+
+Mengenai hal tadi selain memerhatikan hal kecil dari diri saya, kadang saya memerhatikan juga aktivitas unik dari orang di sekitar saya terutama teman-teman saya. 
+
+Hal ini sering saya jadikan seperti upaya saya untuk menjadi lebih dekat dan terhubung dengan mereka. Saya bisa menggunakan teknik tersebut dengan pembicaraan ringan, bercanda, dan hal menarik lainnya.
+
+Selain kebiasaan tersebut dalam lingkup sosial, ketika sedang bersantai sendiri saya sering mendengarkan lagu tenang atau sedih. Saya cenderung menyelam dalam perasaan sendiri untuk refleksi atau sekedar istirahat dari lingkup sosial.
+
+---
+
+## Refleksi dan Nilai Hidup
+
+Bagi saya, **komunikasi diri** adalah tentang keberanian untuk jujur pada diri sendiri. Saya belajar bahwa **menerima kelemahan bukan tanda menyerah**, tapi langkah pertama untuk tumbuh.
+
+Saya ingin hidup dengan prinsip:
+
+> _“Tidak harus selalu benar, tapi harus selalu mau belajar.”_
+
+Dengan memahami diri, saya berharap bisa **lebih autentik, konsisten dengan nilai yang saya yakini**, dan membawa empati ke setiap hubungan dalam kehidupan.
+
+---
+
+## Penutup
+
+Portofolio ini bukan hanya tentang siapa saya sekarang, tapi juga tentang siapa saya ingin jadi.  
+Mungkin hujan akan tetap turun, tapi selama saya melangkah dengan jujur, saya tahu matahari akan muncul pada waktunya.
