--- a/index.tex
+++ b/index.tex
@@ -232,23 +232,16 @@ Cimahi.
 
 \section{Identitas Diri}\label{identitas-diri}
 
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.2619}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.7381}}@{}}
+\begin{longtable}[]{@{}ll@{}}
 \toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Nama}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Muhammad Azikra Wira Pratama
-\end{minipage} \\
+\textbf{Nama} & Muhammad Azikra Wira Pratama \\
 \midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
 \textbf{Program Studi} & Sistem dan Teknologi Informasi \\
 \textbf{NIM} & 18224089 \\
-\textbf{Tujuan} & Memperkenalkan sosok diri secara reflektif berdasarkan
-konsep-konsep komunikasi diri \\
+\textbf{Tujuan} & Memperkenalkan sosok diri secara reflektif \\
 \end{longtable}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -267,6 +260,93 @@ saya yakini}, dan berinteraksi dengan orang lain secara lebih terbuka
 dan bermakna.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\begin{quote}
+\emph{``Hujan tidak selalu berarti sedih, kadang hanya cara dunia
+mengingatkan kita untuk berhenti sejenak.''}
+\end{quote}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Siapa saya}\label{siapa-saya}
+
+Kenalin saya \textbf{Muhammad Azikra Wira Pratama}, atau biasa dipanggil
+\textbf{Zik/Zikra}. Saya mahasiswa dari program studi Sistem dan
+Teknologi Informasi (II), Fakultas STEI, angkatan 2024.
+
+Saya lahir di \textbf{Pekanbaru} dan kini tinggal di \textbf{Cimahi}.
+Walau saya berdomisili Cimahi, saya sangat sering pergi ke
+\textbf{Bandung}.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Apa yang Membentuk Saya}\label{apa-yang-membentuk-saya}
+
+Sejak kecil, saya selalu tertarik dengan bidang teknologi yang dimulai
+dari kesukaan saya ketika memainkan gim. Bidang ini saya telusuri
+sedikit-sedikit hingga jadi tertarik untuk masuk ke jurusan di dunia
+informatika. Kampus yang saya impikan itu \textbf{ITB} dan ketika
+mengetahui bahwa terdapat fakultas \textbf{STEI} saya menjadikan hal
+tersebut target selama menempuh pendidikan \textbf{SMA}.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Bagaimana Saya Melihat Diri}\label{bagaimana-saya-melihat-diri}
+
+Saya orang yang \textbf{pendiam di awal}, tapi \textbf{kalau sudah
+nyaman akan sangat ekpresif}. Saya cenderung memilih diam jika ada
+diberikan waktu untuk berpikir dalam memutuskan suatu hal.
+
+Hal kecil yang terjadi kadang saya perhatikan seperti apa respons
+spontan yang diberikan ketika saya berbicara, bertindak, atau bercanda.
+Saya berusaha untuk memerhatikan diri agar tidak menyinggung perasaan
+orang. Hal tersebutlah yang membuat saya belajar mengenai
+\textbf{Komunikasi diri}, tentang bagaimana jujur tanpa harus membuka
+hal pribadi.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Sisi Ringan Saya}\label{sisi-ringan-saya}
+
+Mengenai hal tadi selain memerhatikan hal kecil dari diri saya, kadang
+saya memerhatikan juga aktivitas unik dari orang di sekitar saya
+terutama teman-teman saya.
+
+Hal ini sering saya jadikan seperti upaya saya untuk menjadi lebih dekat
+dan terhubung dengan mereka. Saya bisa menggunakan teknik tersebut
+dengan pembicaraan ringan, bercanda, dan hal menarik lainnya.
+
+Selain kebiasaan tersebut dalam lingkup sosial, ketika sedang bersantai
+sendiri saya sering mendengarkan lagu tenang atau sedih. Saya cenderung
+menyelam dalam perasaan sendiri untuk refleksi atau sekedar istirahat
+dari lingkup sosial.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Refleksi dan Nilai Hidup}\label{refleksi-dan-nilai-hidup}
+
+Bagi saya, \textbf{komunikasi diri} adalah tentang keberanian untuk
+jujur pada diri sendiri. Saya belajar bahwa \textbf{menerima kelemahan
+bukan tanda menyerah}, tapi langkah pertama untuk tumbuh.
+
+Saya ingin hidup dengan prinsip:
+
+\begin{quote}
+\emph{``Tidak harus selalu benar, tapi harus selalu mau belajar.''}
+\end{quote}
+
+Dengan memahami diri, saya berharap bisa \textbf{lebih autentik,
+konsisten dengan nilai yang saya yakini}, dan membawa empati ke setiap
+hubungan dalam kehidupan.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Penutup}\label{penutup}
+
+Portofolio ini bukan hanya tentang siapa saya sekarang, tapi juga
+tentang siapa saya ingin jadi.\\
+Mungkin hujan akan tetap turun, tapi selama saya melangkah dengan jujur,
+saya tahu matahari akan muncul pada waktunya.
 
 \bookmarksetup{startatroot}
 
