--- a/index.tex
+++ b/index.tex
@@ -270,6 +270,16 @@ mengingatkan kita untuk berhenti sejenak.''}
 
 \section{Siapa saya}\label{siapa-saya}
 
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/Identitas.png}
+
+}
+
+\caption{Profil diri}
+
+\end{figure}%
+
 Kenalin saya \textbf{Muhammad Azikra Wira Pratama}, atau biasa dipanggil
 \textbf{Zik/Zikra}. Saya mahasiswa dari program studi Sistem dan
 Teknologi Informasi (II), Fakultas STEI, angkatan 2024.
@@ -358,18 +368,9 @@ Ini adalah lagu yang sangat berarti bagi saya.
 
 \url{https://www.youtube.com/watch?v=HwGFMez_Tnc}
 
-Lagu ini menemani saya yang sedang mengalami banyaknya masalah, di akhir
-jenjang SMA. Liriknya menggambarkan dimana banyak kenyataan pahit yang
-terjadi, dunia akan terus berjalan seperti hujan yang akan selalu turun
-kapanpun itu. Apapun yang terjadi dalam kehidupan, harus selalu maju
-karena hujan tidak akan berhenti walaupun saat seseorang tenggelam dalam
-kesedihan.
+\section{Tentang Lagu Ini}\label{tentang-lagu-ini}
 
-Why am I singing for you? \href{./Rivers\%20In\%20My\%20Mind.mp3}{River
-in my Mind}
-
-Falling in love everyday \href{./Heaven\%20on\%20Earth.mp3}{Heaven on
-Earth}
+Lagu ini
 
 \bookmarksetup{startatroot}
 
