--- a/My_Song_for_You/index.qmd
+++ b/My_Song_for_You/index.qmd
@@ -4,8 +4,6 @@ Ini adalah lagu yang sangat berarti bagi saya.
 
 {{< video https://www.youtube.com/watch?v=HwGFMez_Tnc>}}
 
-Lagu ini menemani saya yang sedang mengalami banyaknya masalah, di akhir jenjang SMA. Liriknya menggambarkan dimana banyak kenyataan pahit yang terjadi, dunia akan terus berjalan seperti hujan yang akan selalu turun kapanpun itu. Apapun yang terjadi dalam kehidupan, harus selalu maju karena hujan tidak akan berhenti walaupun saat seseorang tenggelam dalam kesedihan.
+## Tentang Lagu Ini
 
-Why am I singing for you? [River in my Mind](./Rivers%20In%20My%20Mind.mp3)
-
-Falling in love everyday [Heaven on Earth](./Heaven%20on%20Earth.mp3)
+Lagu ini 
