--- a/index.tex
+++ b/index.tex
@@ -226,7 +226,7 @@ Cimahi.
 
 \bookmarksetup{startatroot}
 
-\chapter{All About Me}\label{all-about-me}
+\chapter{UTS-1 All About Me}\label{uts-1-all-about-me}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
@@ -272,7 +272,7 @@ mengingatkan kita untuk berhenti sejenak.''}
 
 \begin{figure}[H]
 
-{\centering \includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{images/Identitas.png}
+{\centering \includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{All_about_me/../images/Identitas.png}
 
 }
 
@@ -360,7 +360,7 @@ saya tahu matahari akan muncul pada waktunya.
 
 \bookmarksetup{startatroot}
 
-\chapter{My Songs for You}\label{my-songs-for-you}
+\chapter{UTS-2 My Songs for You}\label{uts-2-my-songs-for-you}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
@@ -374,7 +374,7 @@ Lagu ini
 
 \bookmarksetup{startatroot}
 
-\chapter{My Stories for You}\label{my-stories-for-you}
+\chapter{UTS-3 My Stories for You}\label{uts-3-my-stories-for-you}
 
 A story about my oldest daughter
 \href{https://azrl.wordpress.com/2020/07/18/gaun-pengantin-gladys/\#comment-28004}{Gaun
@@ -396,11 +396,11 @@ Teasing story \url{https://www.youtube.com/watch?v=Dg_4PbBlBf4}
 
 \bookmarksetup{startatroot}
 
-\chapter{My Shapes}\label{my-shapes}
+\chapter{UTS-4 My Shapes}\label{uts-4-my-shapes}
 
 \bookmarksetup{startatroot}
 
-\chapter{My Personal Reviews}\label{my-personal-reviews}
+\chapter{UTS-5 My Personal Reviews}\label{uts-5-my-personal-reviews}
 
 Berikut cara saya melakukan review
 \href{./Doc.5.Mengevaluasi-Esai-Berdasarkan-Rubrik.pdf}{Menilai dan
