--- a/index.tex
+++ b/index.tex
@@ -362,41 +362,247 @@ saya tahu matahari akan muncul pada waktunya.
 
 \chapter{UTS-2 My Songs for You}\label{uts-2-my-songs-for-you}
 
+\section{This is The Song}\label{this-is-the-song}
+
+\url{https://www.youtube.com/embed/LHCob76kigA}
+
+\begin{quote}
+\textbf{Lukas Graham -- ``7 Years''}\\
+\emph{A reflection on growing up, dreams, and family.}
+\end{quote}
+
+\section{Lirik Lagu}\label{lirik-lagu}
+
+{[}Chorus{]} Once, I was seven years old, my mama told me ``Go make
+yourself some friends or you'll be lonely'' Once, I was seven years old
+
+{[}Verse 1{]} It was a big, big world, but we thought we were bigger
+Pushing each other to the limits, we were learnin' quicker By eleven,
+smokin' herb and drinkin' burnin' liquor Never rich, so we were out to
+make that steady figure
+
+{[}Chorus{]} Once, I was eleven years old, my daddy told me ``Go get
+yourself a wife or you'll be lonely'' Once, I was eleven years old
+
+{[}Verse 2{]} I always had that dream like my daddy before me So I
+started writin' songs, I started writin' stories Something about that
+glory just always seemed to bore me 'Cause only those I really love will
+ever really know me
+
+{[}Chorus{]} Once, I was twenty years old, my story got told Before the
+mornin' sun, when life was lonely Once, I was twenty years old (Lukas
+Graham!)
+
+{[}Verse 3{]} I only see my goals, I don't believe in failure 'Cause I
+know the smallest voices, they can make it major I got my boys with me,
+at least those in favor And if we don't meet before I leave, I hope I'll
+see you later
+
+{[}Chorus{]} Once, I was twenty years old, my story got told I was
+writin' 'bout everything I saw before me Once, I was twenty years old
+
+{[}Bridge{]} Soon, we'll be thirty years old, our songs have been sold
+We've traveled around the world and we're still roamin' Soon, we'll be
+thirty years old
+
+{[}Verse 4{]} I'm still learnin' about life, my woman brought children
+for me So I can sing them all my songs and I can tell them stories Most
+of my boys are with me, some are still out seekin' glory And some I had
+to leave behind, my brother, I'm still sorry
+
+{[}Chorus{]} Soon, I'll be sixty years old, my daddy got sixty-one
+Remember life and then your life becomes a better one I made a man so
+happy when I wrote a letter once I hope my children come and visit once
+or twice a month
+
+{[}Breakdown{]} Soon, I'll be sixty years old, will I think the world is
+cold Or will I have a lot of children who can warm me? Soon, I'll be
+sixty years old Soon, I'll be sixty years old, will I think the world is
+cold Or will I have a lot of children who can warm me? Soon, I'll be
+sixty years old
+
+{[}Chorus{]} Once, I was seven years old, my mama told me ``Go make
+yourself some friends or you'll be lonely'' Once, I was seven years old
+Once, I was seven years old
+
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-Ini adalah lagu yang sangat berarti bagi saya.
+\section{Why this song?}\label{why-this-song}
 
-\url{https://www.youtube.com/watch?v=HwGFMez_Tnc}
+Saya memilih lagu ini karena ini cocok untuk direnungkan pada setiap
+pilihan hidup saya dan perkembangan saya.\\
+Bagi saya, tema terkuatnya adalah makna bertambah usia.
 
-\section{Tentang Lagu Ini}\label{tentang-lagu-ini}
+Lagu ini mengingatkan saya lagi jika sedang jenuh untuk melihat lagi ke
+belakang seberapa jauh dan banyak perjuangan yang telah ditempuh untuk
+mencapai titik ini.
 
-Lagu ini
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Personal message}\label{personal-message}
+
+Pesan ini saya tujukan untuk diri saya di masa depan dan kedua orang tua
+yang telah membesarkanku.
+
+\begin{quote}
+``Jika mimpiku membuatku jauh, semoga aku tetap pulang. Jika aku gagal,
+semoga aku tetap berjalan.''
+\end{quote}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Reflection}\label{reflection}
+
+Lagu ini membuat saya melihat keputusan-keputusan penting:
+
+\begin{itemize}
+\tightlist
+\item
+  Keluarga: Ingin hadir di reumah tanpa meninggalkan mimpi.
+\item
+  Belajar: Mau terus mengembang walau bertemu kegagalan.
+\item
+  Diri sendiri: Menikmati proses perjalanan, bukan hanya hasil.
+\end{itemize}
 
 \bookmarksetup{startatroot}
 
 \chapter{UTS-3 My Stories for You}\label{uts-3-my-stories-for-you}
 
-A story about my oldest daughter
-\href{https://azrl.wordpress.com/2020/07/18/gaun-pengantin-gladys/\#comment-28004}{Gaun
-Pemngantin Gladys}
+\begin{quote}
+\emph{``Kadang, keberanian tidak datang dari menghadapi hal besar,
+melainkan dari keputusan kecil untuk melangkah bersama.''}
+\end{quote}
 
-A message to my daughter
-\href{https://azrl.wordpress.com/2021/10/06/the-child-who-learned-to-walk-at-the-disneyland/}{The
-Child Who Learned to Walk at the Disneyland}
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
-A story for my students
-\href{https://azrl.wordpress.com/2008/04/21/fly-my-eagle-fly/}{Fly Eagle
-Fly}
+\section{Judul Cerita}\label{judul-cerita}
 
-A (true) story for my teachers
-\href{\%3Chttps://azrl.wordpress.com/2012/11/28/perginya-sang-mahaputera-dan-mahaguru-berkemeja-putih/}{Sang
-Mahaguru, Sang Mahaputera}
+\textbf{A Way to the Beach}
 
-Teasing story \url{https://www.youtube.com/watch?v=Dg_4PbBlBf4}
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Pendahuluan}\label{pendahuluan}
+
+Malam setelah melalui berbagai kegiatan dalam acara yang paling dinanti
+para remaja \emph{study tour} saya dan dua teman sekamar memutuskan
+untuk menikmati malam terakhir free time di Bali dengan berjalan kaki
+menuju Pantai Kuta.
+
+Awalnya saya ragu, karena waktu sudah malam dan jarak cukup jauh, tetapi
+mereka meyakinkan saya bahwa momen seperti ini tidak akan terulang
+lagi.\\
+Akhirnya, saya pun ikut tanpa tahu bahwa malam itu akan menjadi salah
+satu kenangan paling berharga dalam hidup saya.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Isi Cerita}\label{isi-cerita}
+
+\subsection*{A Way To Beach}\label{a-way-to-beach}
+\addcontentsline{toc}{subsection}{A Way To Beach}
+
+\begin{center}
+\includegraphics[width=0.6\linewidth,height=\textheight,keepaspectratio]{My_Stories_for_You/../images/myFriends.jpg}
+\end{center}
+
+Malam itu, setelah melewati berbagai kegiatan dalam rangkaian study tour
+yang dinantikan para siswa, saya dan dua teman sekamar memutuskan untuk
+berjalan kaki dari hotel menuju Pantai Kuta. Sebenarnya, saya ingin
+menggunakan kendaraan dari aplikasi daring, tetapi kedua teman saya
+bersikeras ingin berjalan kaki, meskipun waktu sudah cukup larut.
+Setelah dibujuk dengan alasan bahwa momen seperti ini tidak akan
+terulang lagi, saya akhirnya setuju. Ada sesuatu yang menarik dalam ide
+berjalan menembus malam di tengah kota wisata yang ramai itu.
+
+Perjalanan dimulai dengan langkah-langkah kecil di trotoar yang sepi dan
+agak gelap. Satu-satunya cahaya berasal dari lampu kendaraan yang
+sesekali melintas. Berdasarkan peta, kami diarahkan ke jalan sempit yang
+hanya cukup untuk satu mobil. Namun, semakin jauh kami melangkah,
+suasana kota mulai berubah dari sunyi menjadi hidup kembali. Suara musik
+terdengar dari berbagai restoran, wisatawan asing tertawa, dan pedagang
+di pinggir jalan menawarkan jasa pijat, terapi ikan, serta aneka cendera
+mata. Keramaian itu membuat perjalanan terasa hangat. Kami terus
+bercanda dan tertawa, menertawakan hal-hal kecil yang kami temui di
+sepanjang jalan.
+
+Meski begitu, ada juga saat-saat ketika suasana tiba-tiba berubah
+hening. Jalanan yang sebelumnya ramai menjadi sepi. Kami hanya ditemani
+langkah kaki sendiri dan hembusan angin malam. Ada sedikit rasa canggung
+dan takut, tetapi anehnya terasa menenangkan. Mungkin karena untuk
+pertama kalinya, saya benar-benar menikmati kebersamaan dalam
+keheningan.
+
+Setelah sekitar tiga puluh menit berjalan, kami akhirnya tiba di Pantai
+Kuta. Rasa lelah seketika hilang, berganti dengan tawa lega dan
+kebahagiaan yang sulit dijelaskan. Kami duduk di atas pasir, berbagi
+cerita, dan menikmati suara ombak di tengah gelapnya malam. Tak lama
+kemudian, rombongan lain datang dan terkejut mengetahui bahwa kami
+menempuh perjalanan sejauh itu hanya dengan berjalan kaki. Kami tertawa
+bersama, seolah perjalanan itu sendiri sudah menjadi bagian dari cerita
+yang akan selalu diingat.
+
+Tidak lama kemudian, lampu sorot di pantai mulai dimatikan sebagai tanda
+bahwa waktu sudah terlalu malam. Kami pun memutuskan untuk kembali ke
+hotel, kali ini dengan hati yang hangat dan pikiran yang penuh kenangan.
+
+Malam itu mengajarkan saya sesuatu yang sederhana namun bermakna: kadang
+keberanian tidak selalu datang dari menghadapi hal besar, melainkan dari
+keputusan kecil untuk melangkah bersama. Saya yang awalnya ragu dan
+takut akhirnya menyadari bahwa justru keputusan spontan itulah yang
+menghadirkan kenangan paling berharga. Perjalanan ke Pantai Kuta bukan
+sekadar perjalanan fisik, tetapi juga perjalanan batin menuju keberanian
+dan kebersamaan yang tulus.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Refleksi Diri}\label{refleksi-diri-1}
+
+Dari pengalaman itu, saya belajar bahwa kadang keputusan kecil yang
+impulsif justru membawa makna besar dalam hidup.\\
+Saya yang awalnya pesimis dan takut berjalan di malam hari ternyata bisa
+menikmati setiap langkah, bahkan bersyukur telah melakukannya.
+
+Perjalanan ini juga membuat saya sadar bahwa rasa nyaman tidak selalu
+berarti aman, dan terkadang kita perlu keluar dari kebiasaan untuk
+menemukan sesuatu yang baru.\\
+Lebih dari sekadar ke pantai, malam itu adalah perjalanan menuju
+keberanian dan kebersamaan.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Sentuhan Personal}\label{sentuhan-personal}
+
+Saya masih ingat ketika kami bercanda di tengah jalan gelap, meniru gaya
+turis yang sedang bernyanyi di restoran pinggir jalan. Salah satu teman
+saya bahkan berkata,
+
+\begin{quote}
+``Kalau kita nyasar, yasudah sih\ldots{} Gak tau''
+\end{quote}
+
+Ucapan itu membuat kami tertawa keras-keras, dan sejak saat itu, setiap
+kali melihat jalan malam yang sunyi, saya selalu teringat malam itu di
+Kuta.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section{Pesan untuk Pembaca}\label{pesan-untuk-pembaca}
+
+Dari kisah sederhana ini, saya ingin menyampaikan bahwa setiap langkah
+kecil yang kita ambil bersama orang lain dapat menjadi kenangan besar di
+masa depan.\\
+Tidak semua keberanian datang dari hal besar. Kadang, ia muncul dari
+keputusan spontan untuk menikmati hidup apa adanya, bahkan jika itu
+hanya sekadar berjalan kaki menuju pantai di malam hari.
 
 \bookmarksetup{startatroot}
 
 \chapter{UTS-4 My Shapes}\label{uts-4-my-shapes}
+
+\section{Pendahuluan}\label{pendahuluan-1}
+
+Saya
 
 \bookmarksetup{startatroot}
 
